# nailong_ws

./: .gitignore
devel/: .catkin
devel/lib/inertial_nav/: inertial_path_node
devel/lib/lakibeam1/: lakibeam1_pcd_node  lakibeam1_scan_node
devel/lib/open_cv/: open_cv_gray  open_cv_green_laser  open_cv_node  open_cv_red  open_cv_trace
devel/lib/pkgconfig/: inertial_nav.pc  lakibeam1.pc  navi_demo01.pc  open_cv.pc  ros_uart_protocol.pc  urdf01.pc  urdf02.pc
devel/lib/ros_uart_protocol/: ros_uart_protocol_node
docs/: CODE_MIGRATION_EXAMPLES.md  DEPLOY_AUTOSTART.md  INDEX.md  MIGRATION_CHECKLIST.md  MIGRATION_PLAN.md  PROJECT_ANALYSIS.md  PROTOCOL.md  QUICK_REFERENCE.md  README.md  ROS1_vs_ROS2_Guide.md  ros2_migrate_helper.sh
scripts/: start_chassis.sh  start_ld06.sh
src/base_driver/: CMakeLists.txt  README.md  REFACTORING_NOTES.md  package.xml  run.sh
src/base_driver/include/base_driver/: uart_protocol_ros2.h
src/base_driver/launch/: base_driver.launch.py  base_driver_with_rviz.launch.py
src/base_driver/src/: base_driver_node.cpp  uart_protocol_ros2.cpp
src/base_driver/urdf/: nailong_base_model.urdf
src/inertial_nav/: CMakeLists.txt
src/inertial_nav/launch/: inertial_nav.launch
src/inertial_nav/src/: inertial_path_node.cpp
src/lakibeam_ws/devel/: .catkin  local_setup.sh  setup.sh
src/lakibeam_ws/src/: CMakeLists.txt
src/navi/: CMakeLists.txt  package.xml
src/navi/config/: nav2_params.yaml
src/navi/launch/: my_carto.launch.py  my_nav2.launch.py
src/navi_demo01/: CMakeLists.txt
src/navi_demo01/config/: nailong.rviz
src/navi_demo01/launch/: gmapping.launch  gmapping_joy.launch  joy.launch  map_amcl.launch  movebase.launch  navi.launch  navi_launch.launch
src/navi_demo01/map/: 2d-1.pbstream  2d-1.pgm  2d-1.yaml
src/navi_demo01/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/open_cv/: CMakeLists.txt  package.xml
src/open_cv/launch/: cam_gray.launch  cam_green_laser.launch  cam_red_square.launch  trace.launch
src/open_cv/src/: open_cv_gray.cpp  open_cv_green_laser.cpp  open_cv_red.cpp  open_cv_trace.cpp
src/ros_uart_protocol/: CMakeLists.txt  package.xml
src/ros_uart_protocol/config/: nailong.rviz
src/ros_uart_protocol/docs/: PROTOCOL.md  奶龙机器人屏幕错误代码指引.md
src/ros_uart_protocol/include/ros_uart_protocol/: uart_protocol_ros.h
src/ros_uart_protocol/launch/: launch_node.launch  uvc_cam.launch
src/ros_uart_protocol/src/: uart_protocol_ros.cpp  uart_ros_node.cpp
src/ros_uart_protocol/urdf/: nailong_model.urdf
src/urdf01/: CMakeLists.txt
src/urdf01/config/: show_mycar.rviz
src/urdf02/: CMakeLists.txt
systemd/: ros2-chassis.service  ros2-ld06.service  ros2-robot.target
(+25 files in other folders)
