cmake_minimum_required(VERSION 3.8)
project(base_driver)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic -std=c++17)
endif()

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(PkgConfig REQUIRED)

pkg_check_modules(SERIAL REQUIRED libserial)

# Include directories
include_directories(include ${SERIAL_INCLUDE_DIRS})

# Create library
add_library(uart_protocol src/uart_protocol_ros2.cpp)
target_include_directories(uart_protocol PUBLIC include)
target_link_libraries(uart_protocol ${SERIAL_LIBRARIES})
ament_target_dependencies(uart_protocol
  rclcpp
)

# Create executable
add_executable(base_driver_node src/base_driver_node.cpp)
target_include_directories(base_driver_node PUBLIC include)
target_link_libraries(base_driver_node uart_protocol ${SERIAL_LIBRARIES})
ament_target_dependencies(base_driver_node
  rclcpp
  std_msgs
  sensor_msgs
  geometry_msgs
  nav_msgs
  tf2_ros
)

# Install
install(TARGETS base_driver_node
  DESTINATION lib/${PROJECT_NAME}
)
install(DIRECTORY include/
  DESTINATION include
)
install(DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
)
install(DIRECTORY urdf
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
